--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "blimp/blimp-http": "@dev",
+        "php": ">=5.4.0",
+        "blimp/blimp-http": "1.0.*",
         "symfony/config": "2.5.*",
         "symfony/yaml": "2.5.*",
         "symfony/routing": "2.5.*"
@@ -20,6 +21,11 @@
     "autoload": {
         "psr-4": {
             "Blimp\\Routing\\": "src"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     },
     "minimum-stability": "dev",
