--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "blimp/blimp-routing",
+    "version": "0.1.3",
     "type": "library",
     "description": "Blimp framework",
     "license": "LGPL-3.0+",
