--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.4.0",
         "blimp/blimp-http": "1.0.*",
-        "symfony/routing": "2.5.*"
+        "symfony/routing": "~2.5,<3.0"
     },
     "autoload": {
         "psr-4": {
